[package]
name = "juancarlos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.6.0"
lsp-types = "0.93.0"
swc_html = "0.10.0"
swc_html_visit = "0.7.0"
swc_css = "0.105.0"
swc_common = "0.18.7"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0"}
